Fix spacing for Password reset form

--- a/ui/src/Common/Input/Input.scss
+++ b/ui/src/Common/Input/Input.scss
@@ -20,7 +20,7 @@
 	display: flex;
 	flex-direction: column;
 	width: 100%;
-	margin: 12px 0 6px;
+	margin: 12px 0 0;
 
 	color: inherit;
 
@@ -31,11 +31,11 @@
 		font-size: 0.9rem;
 	}
 
-	.input-text {
+	.input-element {
 		width: 100%;
-		height: 35px;
-		margin: 0.75rem 0 1rem;
-		padding: 12px 36px 12px 12px;
+		height: 2.25rem;
+		margin: 0.75rem 0 1.5rem;
+		padding: 0.75rem 2.25rem 0.75rem 0.75rem;
 
 		color: main.$asphalt;
 		font-weight: bold;
@@ -65,11 +65,11 @@
 		font-size: 0.8rem;
 
 		position: absolute;
-		bottom: -0.3rem;
+		bottom: 0.2rem;
 	}
 
 	&.invalid {
-		.input-text {
+		.input-element {
 			box-shadow: 0 0 0 2px main.$red;
 		}
 	}
@@ -77,7 +77,7 @@
 
 @include main.dark-theme {
 	.input-group {
-		.input-text {
+		.input-element {
 			color: main.$gray-1;
 
 			background-color: main.$asphalt;
@@ -93,7 +93,7 @@
 		}
 
 		&.invalid {
-			.input-text {
+			.input-element {
 				box-shadow: 0 0 0 2px main.$light-red;
 			}
 		}
