--- a/ui/src/Styles/_buttons.scss
+++ b/ui/src/Styles/_buttons.scss
@@ -21,9 +21,9 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	min-width: 125px;
-	height: 45px;
-	padding: 0 24px;
+	min-width: 7.813rem;
+	height: 2.75rem;
+	padding: 0 1.5rem;
 
 	font-family: inherit;
 	font-weight: 700;
