--- a/ui/src/Styles/_fonts.scss
+++ b/ui/src/Styles/_fonts.scss
@@ -25,6 +25,9 @@
 @import '~@fontsource/quicksand/700.css';
 
 p {
+	margin: 1rem 0;
+	padding: 0;
+
 	font-weight: 500;
 	font-size: 16px;
 	line-height: 1.5;
